--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ fastparquet>=2024.2.0
 ipykernel>=6.29
 mlflow>=2.11
 fastapi>=0.110
+uvicorn>=0.29
 evidently==0.6.7
 apache-airflow>=2.9
 xgboost>=3.0.5
-uvicorn>=0.37
 boto3>=1.40
 pytest>=7.0
+requests>=2.31
+flake8>=7.0
